fix overflow container

--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -6,13 +6,6 @@ body {
     flex-direction: column;
 }
 
-.toDoListItems {
-    max-height: 50vh;
-    overflow-y: scroll;
-}
-
 h1 {
     text-align: center;
 }
-
-
